@@ -1,3 +1,7 @@
+9/20/22bis
+	Implemented code to list candidates for a given cell, or for the entire grid, for 9x9 grids. Produces a list of excluded values which can be pasted into code as hints to speed the candidate search.
+	Added test case.
+
 9/20/22
 	Re-factored indexing code to fix bug introduced with previous "fix" for Broken 159
 	Added support for vaults
